<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUp_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/signupLogoImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/app_logo"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="25dp"/>

    <!--SubHeading-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunhead"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:layout_marginBottom="20dp"
        />

    <!-- Name Input -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:background="@drawable/custom_edittext"/>

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:background="@drawable/custom_edittext"/>

    <!-- Password Input -->

            <!-- Confirm Password Input -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />
            <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:background="@drawable/custom_edittext"/>

    <!-- Sign-Up Button -->
            <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:backgroundTint="@color/dark_green"
        android:textColor="@color/white"
        android:layout_marginTop="20dp" />

    <!-- Redirect to Login -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_acc"
            android:textColor="@color/red"
            />
        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            />
    </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>