<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LogIn_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/signupLogoImageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/app_logo"
                android:layout_marginBottom="-30dp"
                android:layout_marginTop="25dp"/>

            <!--SubHeading-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunhead"
                android:textStyle="bold"
                android:textColor="@color/grey"
                />

            <!-- Email Input -->
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:background="@drawable/custom_edittext"/>

            <!-- Password Input -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/custom_edittext"/>

            <!-- Login Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/dark_green"
                android:textColor="@color/white"
                android:layout_marginTop="20dp" />

            <!--Forgot Password-->
            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:textColor="@color/red"
                android:layout_marginTop="10dp" />

            <!-- Sign Up Redirect -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_acc"
                    android:textColor="@color/dark_blue"
                    />
                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@color/dark_green"
                    />
            </LinearLayout>

            <com.developer.gbuttons.GoogleSignInButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_sign_in"
                android:id="@+id/googleBtn"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>