<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:id="@+id/dailog_forgot">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:id="@+id/dailog_box"
            android:background="@drawable/white_box">


            <TextView
                android:id="@+id/forgot_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/forgot_pass"
                android:textColor="@color/red"
                android:textSize="19sp" />
            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:padding="10dp"
                />
            <EditText
                android:id="@+id/email_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="example@gmail.com"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@color/red"
                    />
                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/green"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
